--- a/src/main/res/layout/content_barcode.xml
+++ b/src/main/res/layout/content_barcode.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.kaash.barcode.BarcodeActivity"
-    tools:showIn="@layout/activity_barcode">
+    tools:showIn="@layout/activity_barcode"
+    android:background="#000">
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/topLayout"
@@ -18,13 +19,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="2">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+
+            />
 
 
         <com.example.kaash.barcode.CameraSourcePreview
             android:id="@+id/preview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            >
 
             <com.example.kaash.barcode.GraphicOverlay
                 android:id="@+id/overlay"
@@ -32,10 +41,6 @@
                 android:layout_height="match_parent" />
 
         </com.example.kaash.barcode.CameraSourcePreview>
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/imageView" />
 
     </LinearLayout>
 
